--- a/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -150,11 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:herschelhelp.filters:The filters are missing in the database: mosaic_ks.\n",
+      "The are present in these columns: f_ap_mosaic_ks, f_mosaic_ks, ferr_ap_mosaic_ks, ferr_mosaic_ks, m_ap_mosaic_ks, m_mosaic_ks, merr_ap_mosaic_ks, merr_mosaic_ks.\n"
+     ]
+    }
+   ],
    "source": [
     "# Correction for galactic extinction\n",
     "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -172,6 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING:herschelhelp.external:The band mosaic_ks is not in HELP filter database.\n",
       "INFO:herschelhelp.external:For 373 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 223 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 220 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -306,24 +316,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 25919\n"
+      "Number of sources with z-spec: 23677\n"
      ]
     }
    ],
    "source": [
     "print(\"Number of sources with z-spec: {}\".format(len(best_catalogue)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Correction for galactic extinction\n",
-    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
    ]
   },
   {
@@ -337,14 +335,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:herschelhelp.external:For 373 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 223 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 220 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 65 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 62 sources, the band 90prime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 61 sources, the band mosaic_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 25 sources, the band gpc1_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 14 sources, the band mosaic_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
+      "ERROR:herschelhelp.filters:The filters are missing in the database: mosaic_ks.\n",
+      "The are present in these columns: f_ap_mosaic_ks, f_mosaic_ks, ferr_ap_mosaic_ks, ferr_mosaic_ks, m_ap_mosaic_ks, m_mosaic_ks, merr_ap_mosaic_ks, merr_mosaic_ks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:herschelhelp.external:The band mosaic_ks is not in HELP filter database.\n",
+      "INFO:herschelhelp.external:For 307 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 184 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 181 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 50 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 47 sources, the band 90prime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 46 sources, the band mosaic_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 18 sources, the band gpc1_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 10 sources, the band mosaic_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
      ]
     }
    ],
@@ -356,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
